--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "build": "^0.1.4",
-    "chat": "file:..",
-    "npx": "^10.2.2",
+    "vite": "^5.4.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
@@ -24,7 +22,6 @@
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
-    "globals": "^16.5.0",
-    "vite": "^5.4.0"
+    "globals": "^16.5.0"
   }
 }
